src/objects/LnP_SubSection_Icon__mdt.object
<CustomObject>
    <description>Icons are supposed to be mapped here</description>
    <fields>
        <fullName>LnP_Icon_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This stores the label name that is to be mapped</description>
        <label>Icon Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LnP_Icon_SVG_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the real back hand name of the icon</description>
        <label>Icon SVG Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LnP_Page_Name__c</fullName>
        <description>The page on which the name&apos;s to be mapped and shown</description>
        <label>Page Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LnP Sub Section Icon</label>
    <pluralLabel>LnP Sub Section Icons</pluralLabel>
</CustomObject>